# gg

./: .travis.yml  configure.ac
src/compiler/: .gitignore  Makefile.am  fsintercept.c  fsintercept.cc
src/frontend/: gg-remodel.cc
src/models/: gcc.cc  gcc.hh
src/protobufs/: meta.proto
src/thunk/: Makefile.am  ggutils.cc  ggutils.hh  graph.cc  graph.hh  thunk_writer.cc
